fixed font discrepancy alignment

--- a/app/assets/stylesheets/_global.sass
+++ b/app/assets/stylesheets/_global.sass
@@ -37,7 +37,7 @@ a
     color: $brand
   &.header
     color: white
-    font-size: 1.4em
+    font-size: 1.3em
   &.footer
     color: white
     font-size: 1.1em
