--- a/app/assets/stylesheets/subscription.sass
+++ b/app/assets/stylesheets/subscription.sass
@@ -49,7 +49,7 @@
     width: 25%
     a.join
       @include button($brand)
-      width: 150px
+      width: 160px
       font-size: 1.5em
       line-height: 0.7em
       float: right
@@ -62,7 +62,7 @@
     width: 100%
     a.subscribe
       @include button($brand)
-      width: 150px
+      width: 160px
       font-size: 1.5em
       line-height: 0.7em
   &.siguiente
